# xai-api

./: .env  .env_ex  Cargo.toml  README.md  dockerfile  init-db.sql
src/: config.rs  error.rs  main.rs
src/api/: openapi.rs
src/db/: connection.rs  migrations.rs
src/db/migrations/: 0001_create_images_and_preferences.sql  0002_create_few_images.sql
src/enums/: mask_type.rs  mod.rs
src/models/: image.rs  mask.rs  mod.rs  preference.rs  user.rs
src/routes/: health.rs  images.rs  mod.rs  preferences.rs  users.rs
src/services/: images.rs
